# wordsearch

./: .gitignore  Cargo.toml  README.md  words.txt
src/: config.rs  grid.rs  main.rs
