[package]
name = "wordsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
imageproc = "0.23"
rand = "0.8"
rand_derive2 = "0.1"
rusttype = "0.9"
